--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/elvisfagundes/teste-cypress-vox.git"
   },
+  "test": "echo \"Error: no test specified\" && exit 1",
   "author": "Elvis Fagundes",
   "license": "MIT",
   "bugs": {
