--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,20 +4,22 @@ on: push
 
 jobs:
   cypress-run:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         
       - name: Setup Nods.js envoironment
         uses: actions/setup-node@v4.1.0
+        with:
+          node-version: 20.17.0
         
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          runTests: false
           build: npm run build
           start: npm start
+          test: npx cypress run
           
       - name: Save build folder
         uses: actions/upload-artifact@v4
