--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,7 @@ jobs:
         uses: SonarSource/sonarcloud-github-action@v3.1.0
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v4.4.3
+
+      - name: Publish CTRF Failed Test Summary Results
+        run: npx github-actions-ctrf failed path-to-your-ctrf-report.json
+        if: always()
