--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,9 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-      - name: Publish CTRF Failed Test Summary Results
-        run: npx github-actions-ctrf failed path-to-your-ctrf-report.json
-        if: always()
+      - name: SonarCloud Summary Action
+        uses: thecanadianroot/sonarcloud-summary-action@v1
+        with:
+          github-repository: ${{ github.repository }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          pull-request: ${{ github.event.pull_request.number }} 
