--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,5 +26,5 @@ jobs:
         uses: thecanadianroot/sonarcloud-summary-action@v1
         with:
           github-repository: ${{ github.repository }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.TOKEN_GITHUB }}
           pull-request: ${{ github.event.pull_request.number }} 
