--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,4 @@ jobs:
         with:
           github-repository: ${{ github.repository }}
           github-token: ${{ secrets.TOKEN_GITHUB }}
-          pull-request: ${{ github.event.pull_request.number }} 
+          pull-request: '1'
