--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,6 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-      - name: SonarCloud Summary Action
-        uses: thecanadianroot/sonarcloud-summary-action@v1
-        with:
-          github-repository: ${{ github.repository }}
-          github-token: ${{ secrets.TOKEN_GITHUB }}
-          pull-request: '1'
+      - name: Publish CTRF Suite Folded Summary
+        run: npx github-actions-ctrf suite-list path-to-your-ctrf-report.json
+        if: always()
