--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@faker-js/faker": "^9.1.0",
     "cypress": "^13.15.1",
+    "cypress-ctrf-json-reporter": "^0.0.11",
     "cypress-mochawesome-reporter": "^3.8.2",
     "cypress-multi-reporters": "^2.0.4",
     "mocha-junit-reporter": "^2.2.1"
