--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,9 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
+      - name: CTRF build
+        run: npx github-actions-ctrf ctrf-report.json
+
       - name: Publish CTRF Suite Folded Summary
         run: npx github-actions-ctrf suite-list ctrf-report.json
         if: always()
