--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Install dependencies 
         run: |
           npm install --save-dev cypress-ctrf-json-reporter
+          npx github-actions-ctrf ctrf/ctrf-report.json
           
       - name: E2E Testes
         uses: cypress-io/github-action@v6 
