--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       
       - name: Publish CTRF Suite Folded Summary
-        run: npx github-actions-ctrf suite-list path-to-your-ctrf-report.json
+        run: npx github-actions-ctrf suite-list ctrf/ctrf-report.json
         if: always()
