--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       
       - name: Publish CTRF Test Summary Results
-        run: npx github-actions-ctrf summary path-to-your-ctrf-report.json
+        run: npx github-actions-ctrf summary ctrf/ctrf-report.json
         if: always()
